# GoofyRider

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
